--- a/configs/tasks.yml
+++ b/configs/tasks.yml
@@ -17,10 +17,10 @@ evaluate_company:
     Using your tools find information about the company of jobs.
     Information can include company culture reviews, company financial reports, and stock performance. 
     provide an additional rating for the company in a field called company_rating.
-    The rating is between 1-10 where 10 is the best rating. Every job should have a rating.  
+    The rating is between 1-10 where 10 is the best rating. Every job should have a company_rating.
     Additionally add a company_rating_description field that explains the reasoning behind the number of rating in 1 or 2 sentences.
     Make sure that all information about the jobs is also maintained in the output.
-  expected_output:  A structured output as a valid json of the list of jobs found and their respective ratings, make sure to structure all information according this model {output_schema}
+  expected_output:  A structured output as a valid json of the list of jobs found and their respective company raitings, make sure to structure all information according this schema {output_schema}
 
 structure_results:
   description: |
